--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello css</title>
-    <link rel="stylesheet" href="css\style.css" type="text/css">
+    <title>Devionity exercises - CSS</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 
