--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-
+Please click the <a href="http://www.google.com">link</a> to go to the Google home page
+<div class="bar">
+    <ul>
+        <li><a href="#">Home page</a></li>
+        <li><a href="#">Contacts</a></li>
+    </ul>
+</div>
 </body>
 </html>
