div class bar was changed: visualisation was changed - lists was deleted

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
 Please click the <a href="http://www.google.com">link</a> to go to the Google home page
 <div class="bar">
-    <ul>
-        <li><a href="#">Home page</a></li>
-        <li><a href="#">Contacts</a></li>
-    </ul>
+    <a href="#">Home page</a><br>
+    <a href="#">Contacts</a><br>
 </div>
 </body>
 </html>
