difficult selectors were added: color of bold text is #FF3399, the color of the cursor when you hover is black

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 Please click the <a href="http://www.google.com">link</a> to go to the Google home page
 <div class="bar">
-    <a href="#">Home page</a><br>
-    <a href="#">Contacts</a><br>
+    <a href="#"><b>Home page</b></a><br>
+    <a href="#"><b>Contacts</b></a><br>
 </div>
 </body>
 </html>
