text formatting was added: class bold, underlined and italic were created

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@ Please click the <a href="http://www.google.com">link</a> to go to the Google ho
     <a href="#"><b>Home page</b></a><br>
     <a href="#"><b>Contacts</b></a><br>
 </div>
+<p><span class="bold">There are a few words about CSS</span></p>
+<p><span class="underlined">CSS</span><span class="italic"> is cascading style sheet</span></p>
+
 </body>
 </html>
