header, navigation, content, footer were added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
 </head>
 <body>
 Please click the <a href="http://www.google.com">link</a> to go to the Google home page
-<div class="bar">
-    <a href="#"><b>Home page</b></a><br>
-    <a href="#"><b>Contacts</b></a><br>
+<div class="conteiner">
+    <div class="header">There is a header</div>
+    <div class="bar">
+        <a href="#"><b>Home page</b></a><br>
+        <a href="#"><b>Contacts</b></a><br>
+    </div>
+    <div class="navigation">
+        <a href="#">Photo</a><br>
+        <a href="#">Price</a><br>
+        <a href="#">Order</a><br>
+    </div>
+    <div class="content">
+        <p><span class="bold">There are a few words about CSS</span></p>
+        <p><span class="underlined">CSS</span><span class="italic"> is cascading style sheet</span></p>
+    </div>
+    <div class="footer">Join us in an instagram</div>
 </div>
-<p><span class="bold">There are a few words about CSS</span></p>
-<p><span class="underlined">CSS</span><span class="italic"> is cascading style sheet</span></p>
-
 </body>
 </html>
